# PlugIQ-Tools

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  publish-pypi.yml
tests/: conftest.py  test_classify.py  test_safety.py  test_speed.py
usb_cable_tester/: __main__.py  banner.py  classify.py  cli.py  safety.py  speed_test.py  store.py  system_info.py  tui.py  volumes.py  wizard.py
