[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usb-cable-tester"
version = "1.0.0"
description = "USB-C cable capability probe and throughput tester (CLI/TUI)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Thatkidtk" }
]
keywords = ["usb", "usb-c", "thunderbolt", "usb4", "cli", "tui", "displayport"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: System :: Hardware",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Thatkidtk/PlugIQ-Tools"
Issues = "https://github.com/Thatkidtk/PlugIQ-Tools/issues"

[project.scripts]
usbct = "usb_cable_tester.cli:main"
