[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugiq-tools"
version = "1.0.0"
description = "Smart USB-C Cable Tester — probe capabilities & measure real-world throughput"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Thatkidtk" }
]
keywords = ["usb", "usb-c", "thunderbolt", "usb4", "cli", "tui", "displayport", "plugiq"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: System :: Hardware",
]
dependencies = []
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Thatkidtk/PlugIQ-Tools"
Issues = "https://github.com/Thatkidtk/PlugIQ-Tools/issues"

[project.scripts]
plugiq = "usb_cable_tester.__main__:main"
usbct = "usb_cable_tester.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["usb_cable_tester*"]

[tool.setuptools.package-data]
usb_cable_tester = ["py.typed"]
